treatment-service small improvements